--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         - dscheduler
     deploy:
       placement:
-        contraints: 
+        constraints: 
             - node.role == manager
 
   dscheduler:
@@ -26,7 +26,7 @@ services:
       - distributed
     deploy:
       placement:
-        contraints: 
+        constraints: 
            - node.role == manager
 
   dworker:
